# MediaBoxAppWithFastApi

./: .gitignore  pyproject.toml
app/: db.py  main.py  utils.py
app/core/: security.py
app/models/: __init__.py  comment.py  media.py  post.py  user.py
app/routers/: auth.py  comments.py  posts.py
app/schemas/: comment.py  media.py  post.py  user.py
